[package]
name = "drp_hcl_alns_pta"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0.137"
serde_derive = "1.0.137"
serde_json = "1.0.81"
regex = "1"
itertools = "0.10.2"
substring = "1.4.5"
rand = "0.8.5"
rand_pcg = "0.3.1"
ordered-float = "3.0.0"
rayon = "1.5.3"
cached = "0.34.1"